# OCRefBot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
oc_ref_bot/: bot.py  cmd_router.py  config.py  database.py  inline_router.py  main.py
